--- a/.github/workflows/on-green.yml
+++ b/.github/workflows/on-green.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
       - uses: actions/github-script@v6
         with:
-          script:
+          script: console.log(context)
