--- a/.github/workflows/on-green.yml
+++ b/.github/workflows/on-green.yml
@@ -10,4 +10,10 @@ jobs:
     steps:
       - uses: actions/github-script@v6
         with:
-          script: console.log('on green')
+          script: |
+            const check_runs = (await github.rest.checks.listForRef({
+              owner : context.payload.repository.owner.login,
+              repo : context.payload.repository.name,
+              ref: pull_request.head.sha,
+            })).data.check_runs;
+            console.info(check_runs)
