--- a/.github/workflows/on-green.yml
+++ b/.github/workflows/on-green.yml
@@ -1,11 +1,8 @@
 name: on_green
 on:
   workflow_run:
-    workflows:
-      - dep1
-      - dep2
-    types:
-      - completed
+    workflows: [dep1, dep2]
+    types: [completed]
 
 jobs:
   on_green:
@@ -13,4 +10,10 @@ jobs:
     steps:
       - uses: actions/github-script@v6
         with:
-          script:
+          script: |
+            const check_runs = (await github.rest.checks.listForRef({
+              owner : context.payload.repository.owner.login,
+              repo : context.payload.repository.name,
+              ref: pull_request.head.sha,
+            })).data.check_runs;
+            console.info(check_runs)
