--- a/.github/workflows/on-green-pr.yml
+++ b/.github/workflows/on-green-pr.yml
@@ -4,4 +4,4 @@ jobs:
   on_green_pr:
     runs-on: ubuntu-latest
     steps:
-      - uses: ./.github/workflows/on-green.yml@main
+      - uses: ./.github/workflows/on-green
