--- a/.github/workflows/on-green-pr.yml
+++ b/.github/workflows/on-green-pr.yml
@@ -4,4 +4,5 @@ jobs:
   on_green_pr:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - uses: ./.github/workflows/on-green
