--- a/.github/workflows/on-green/action.yml
+++ b/.github/workflows/on-green/action.yml
@@ -5,17 +5,16 @@ on:
     workflows: [dep1, dep2]
     types: [completed]
 
-jobs:
-  on_green:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/github-script@v6
-        with:
-          script: |
-            console.info(context);
-            const check_runs = (await github.rest.checks.listForRef({
-              owner : context.payload.repository.owner.login,
-              repo : context.payload.repository.name,
-              ref: pull_request.head.sha,
-            })).data.check_runs;
-            console.info(check_runs)
+runs:
+  using: "composite"
+  steps:
+    - uses: actions/github-script@v6
+      with:
+        script: |
+          console.info(context);
+          const check_runs = (await github.rest.checks.listForRef({
+            owner : context.payload.repository.owner.login,
+            repo : context.payload.repository.name,
+            ref: pull_request.head.sha,
+          })).data.check_runs;
+          console.info(check_runs)
