--- a/.github/workflows/on-green-pr.yml
+++ b/.github/workflows/on-green-pr.yml
@@ -1,5 +1,10 @@
 name: on_green_pr
-on: pull_request
+on:
+  pull_request:
+  workflow_run:
+    workflows: [dep1, dep2]
+    types: [completed]
+
 jobs:
   on_green_pr:
     runs-on: ubuntu-latest
