--- a/.github/workflows/dep2.yml
+++ b/.github/workflows/dep2.yml
@@ -6,4 +6,9 @@ jobs:
     steps:
       - uses: actions/github-script@v6
         with:
-          script: console.log(context)
+          script: |
+            const sleep = new Promise((reject, resolve) => {
+              setTimeout(() => resolve(), 5000);
+            });
+            const t = await sleep;
+            console.log(context)
